  (Xavier Leroy and Gabriel Scherer)

- #9696: ocamltest now shows its log when a test fails. In addition, the log
  contains the output of executed programs.
  (Nicolás Ojeda Bär, review by David Allsopp, Sébastien Hinderer and Gabriel
  Scherer)

- #9688: Expose the main entrypoint in compilerlibs
  (Stephen Dolan, review by Nicolás Ojeda Bär, Greta Yorsh and David Allsopp)

### Build system:

- #7121, #9558: Always the autoconf-discovered ld in PACKLD. For
  cross-compilation, this means the triplet-prefixed version will always be
  used.
  (David Allsopp, report by Adrian Nader, review by Sébastien Hinderer)

- #9332, #9518, #9529: Cease storing C dependencies in the codebase. C
  dependencies are generated on-the-fly in development mode. For incremental
  compilation, the MSVC ports require GCC to be present.
  (David Allsopp, review by Sébastien Hinderer, YAML-fu by Stephen Dolan)

- #9527: stop including configuration when running 'clean' rules
  to avoid C dependency recomputation.
  (Gabriel Scherer, review by David Allsopp)

### Bug fixes:

- #7902, #9556: Type-checker infers recursive type, even though -rectypes is
  off.
  (Jacques Garrigue, report by Francois Pottier, review by Leo White)

- #8747, #9709: incorrect principality warning on functional updates of records
  (Jacques Garrigue, report and review by Thomas Refis)

- #9469: Better backtraces for lazy values
  (Leo White, review by Nicolás Ojeda Bär)

- #9521, #9522: correctly fail when comparing functions
  with Closure and Infix tags.
  (Gabriel Scherer and Jeremy Yallop and Xavier Leroy,
   report by Twitter user @st_toHKR through Jun Furuse)

- #9611: maintain order of load path entries in various situations: when passing
  them to system linker, ppx contexts, etc.
  (Nicolás Ojeda Bär, review by Jérémie Dimino and Gabriel Scherer)

- #9633: ocamltest: fix a bug when certain variables set in test scripts would
  be ignored (eg `ocamlrunparam`).